# mlx-agent-rl

./: .gitignore  LICENSE  README.md  pyproject.toml  spider_rl_report.html
configs/: gsm8k_calculator.yaml  hotpotqa.yaml  numberline.yaml  spider.yaml  spider_v10.yaml  spider_v4.yaml  spider_v5.yaml  spider_v6.yaml  spider_v7.yaml  spider_v8.yaml  spider_v9b.yaml  webshop.yaml  webshop_smoke.yaml  webshop_smoke_dense.yaml
examples/: train_gsm8k.py  train_hotpotqa.py  train_numberline.py  train_spider.py  train_webshop.py
mlx_agent_rl/algorithms/: base.py  dapo.py  dr_grpo.py  gigpo.py  grpo.py
mlx_agent_rl/core/: llamacpp_backend.py  mlc_backend.py  policy.py  rollout.py  trainer.py
mlx_agent_rl/data/: trajectory.py
mlx_agent_rl/environments/: base.py  calculator.py  hotpotqa.py  numberline.py  sql_agent.py  webshop.py
papers/: spider_rl_findings.md
scripts/: bench_batch_generate.py  bench_collector_episode.py  bench_episode_rollout.py  bench_prompt_cache.py  build_difficulty_filter.py  debug_hotpotqa_rollout.py  debug_spider_by_hardness.py  debug_spider_rollout.py  debug_spider_unanswered.py  eval_hotpotqa_baseline.py  eval_spider_baseline.py  eval_spider_by_hardness.py  eval_spider_passk.py  smoke_webshop_action.py  verify_prompt_cache_correct.py  verify_ref_lps_cache.py
tests/: test_calculator_env.py  test_dapo.py  test_dr_grpo.py  test_gigpo.py  test_grpo.py  test_hotpotqa_env.py  test_integration.py  test_memory.py  test_numberline_env.py  test_policy.py  test_rollout.py  test_sql_agent_env.py  test_trainer.py  test_trajectory.py  test_webshop_env.py
(+1 files in other folders)
