[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mlx-agent-rl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.22.0",
    "mlx-lm>=0.25.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
